Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
All tests - dmesg-fail/dmesg-warn - BUG: workqueue leaked lock or atomic.*
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7971/re-tgl-u2/igt@gem_exec_parallel@bcs0-fds.html
<6> [18.739956] Console: switching to colour dummy device 80x25
<6> [18.739995] [IGT] gem_exec_parallel: executing
<5> [18.753693] Setting dangerous option reset - tainting kernel
<6> [18.756836] [IGT] gem_exec_parallel: starting subtest bcs0-fds
<3> [18.823693] BUG: workqueue leaked lock or atomic: kworker/6:2/0x00000000/347
last function: kfree_rcu_monitor
<4> [18.823735] 4 locks held by kworker/6:2/347:
<4> [18.823737] #0: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [18.823805] #1: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [18.823843] #2: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [18.823878] #3: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [18.823913] CPU: 6 PID: 347 Comm: kworker/6:2 Tainted: G U 5.6.0-rc2-CI-CI_DRM_7971+ #1
<4> [18.823915] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
<4> [18.823918] Workqueue: events kfree_rcu_monitor
<4> [18.823920] Call Trace:
<4> [18.823925] dump_stack+0x71/0x9b
<4> [18.823929] process_one_work+0x4f6/0x600
<4> [18.823931] ? worker_thread+0xc9/0x380
<4> [18.823937] worker_thread+0x37/0x380
<4> [18.823941] ? process_one_work+0x600/0x600
<4> [18.823943] kthread+0x119/0x130
<4> [18.823945] ? kthread_park+0x80/0x80
<4> [18.823949] ret_from_fork+0x24/0x50
<3> [18.835874] BUG: workqueue leaked lock or atomic: kworker/6:2/0x00000000/347
last function: kfree_rcu_work
<4> [18.835904] 4 locks held by kworker/6:2/347:
<4> [18.835906] #0: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [18.835975] #1: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [18.836013] #2: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [18.836046] #3: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [18.836077] CPU: 6 PID: 347 Comm: kworker/6:2 Tainted: G U 5.6.0-rc2-CI-CI_DRM_7971+ #1
<4> [18.836079] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7971/re-tgl-u2/igt@core_auth@basic-auth.html
4> [47.195255] 4 locks held by kworker/7:2/199:
<4> [47.195256] #0: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.195288] #1: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.195312] #2: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.195334] #3: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.195357] CPU: 7 PID: 199 Comm: kworker/7:2 Tainted: G U 5.6.0-rc2-CI-CI_DRM_7971+ #1
<4> [47.195358] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
<4> [47.195360] Workqueue: events drm_fb_helper_dirty_work
<4> [47.195362] Call Trace:
<4> [47.195364] dump_stack+0x71/0x9b
<4> [47.195366] process_one_work+0x4f6/0x600
<4> [47.195367] ? worker_thread+0xc9/0x380
<4> [47.195372] worker_thread+0x37/0x380
<4> [47.195375] ? process_one_work+0x600/0x600
<4> [47.195376] kthread+0x119/0x130
<4> [47.195378] ? kthread_park+0x80/0x80
<4> [47.195380] ret_from_fork+0x24/0x50
<3> [47.195391] BUG: workqueue leaked lock or atomic: kworker/7:2/0x00000000/199
last function: drm_fb_helper_dirty_work
<3> [47.197409] BUG: workqueue leaked lock or atomic: kworker/u16:2/0x00000000/198
last function: ext4_end_io_rsv_work
<4> [47.199551] 4 locks held by kworker/7:2/199:
<4> [47.199552] #0: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.199587] #1: ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.206184] #2:
<4> [47.206186] 4 locks held by kworker/u16:2/198:
<4> [47.206187] ffffffff826c63a0 (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.206237] #0: ffffffff826c63a0 (drm_connector_list_iter
<4> [47.206241] #3:
<4> [47.206242] ){.+.+}
<4> [47.206244] ffffffff826c63a0
<4> [47.206296] , at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.206298] (
<4> [47.206299] #1:
<4> [47.206299] drm_connector_list_iter){.+.+}
<4> [47.206302] ffffffff826c63a0
<4> [47.206341] , at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.206344] CPU: 7 PID: 199 Comm: kworker/7:2 Tainted: G U 5.6.0-rc2-CI-CI_DRM_7971+ #1
<4> [47.206344] (drm_connector_list_iter){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.206394] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
<4> [47.206396] #2: ffffffff826c63a0
<4> [47.206399] Workqueue: events drm_fb_helper_dirty_work
<4> [47.206399] (drm_connector_list_iter
<4> [47.206402] ){.+.+}, at: intel_dp_connector_atomic_check+0x9a/0x2b0 [i915]
<4> [47.206446] Call Trace:
<4> [47.206447] #3: ffffffff826c63a0 (drm_connector_list_iter
<4> [47.206451] dump_stack+0x71/0x9b
<4> [47.206451] ){.+.+}, at: intel_dp_connector_atomic_check+0x134/0x2b0 [i915]
<4> [47.206497] process_one_work+0x4f6/0x600
<4> [47.206500] ? worker_thread+0xc9/0x380
<4> [47.206509] worker_thread+0x37/0x380
<4> [47.206514] ? process_one_work+0x600/0x600
<4> [47.206517] kthread+0x119/0x130
<4> [47.206520] ? kthread_park+0x80/0x80
<4> [47.206526] ret_from_fork+0x24/0x50
<4> [47.206541] CPU: 5 PID: 198 Comm: kworker/u16:2 Tainted: G U 5.6.0-rc2-CI-CI_DRM_7971+ #1
<4> [47.206545] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
<4> [47.206551] Workqueue: ext4-rsv-conversion ext4_end_io_rsv_work
<4> [47.206554] Call Trace:
<4> [47.206559] dump_stack+0x71/0x9b
<4> [47.206563] process_one_work+0x4f6/0x600
<4> [47.206566] ? worker_thread+0xc9/0x380
<4> [47.206572] worker_thread+0x37/0x380
<3> [47.206579] BUG: workqueue leaked lock or atomic: kworker/7:2/0x00000000/199